--- a/action.yml
+++ b/action.yml
@@ -34,8 +34,8 @@ runs:
         ${{ github.action_path }}/Scripts/Deploy-ApplicationPackage.ps1
         ${{ inputs.source-path }}
         ${{ inputs.target-path }}
-        ${{ inputs.website-name }}
-        ${{ inputs.server-computer-name }}
+        'Default Web Site'
+        'https://70.36.25.50:32141/msdeploy.axd?site=Default Web Site'
         ${{ inputs.server-username }}
         ${{ inputs.server-password }}
         ${{ inputs.target-delete }}
