--- a/action.yml
+++ b/action.yml
@@ -32,10 +32,10 @@ runs:
       shell: pwsh
       run: >
         ${{ github.action_path }}/Scripts/Deploy-ApplicationPackage.ps1
-        "${{ inputs.source-path }}"
+        "${{ inputs.website-name }}"
         ${{ inputs.target-path }}
-        'Default Web Site'
-        'https://70.36.25.50:32141/msdeploy.axd'
+        "${{ inputs.website-name }}"
+        ${{ inputs.server-computer-name }}
         ${{ inputs.server-username }}
         ${{ inputs.server-password }}
         ${{ inputs.target-delete }}
